# PGETemplate

./: .gitignore  CMakeLists.txt  README.md  ResourcePackCreator.cpp  main.cpp
include/: CustomScreens.h  KeyListener.h  Resources.h  Screen.h  ScreenManager.h  Sounds.h  irrKlangResourceFileFactory.h  olcPixelGameEngine.h
irrKlang/include/: irrKlang.h
resources/: audio_files.txt  test.txt
src/: CustomScreens.cpp  KeyListener.cpp  Resources.cpp  Screen.cpp  ScreenManager.cpp
